# ChangeLog for dev-python/python-novaclient
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-novaclient/ChangeLog,v 1.19 2014/04/27 05:51:36 prometheanfire Exp $

  27 Apr 2014; Matthew Thode <prometheanfire@gentoo.org>
  -python-novaclient-2.11.1-r1.ebuild, -python-novaclient-2.13.0-r1.ebuild,
  -python-novaclient-2.14.1.ebuild:
  updating clients

*python-novaclient-2.17.0 (21 Apr 2014)

  21 Apr 2014; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.17.0.ebuild:
  update for bug 508186

  30 Mar 2014; Michał Górny <mgorny@gentoo.org> python-novaclient-2.14.1.ebuild:
  Disable py2.6 since it is no longer supported in dev-python/pbr.

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org>
  python-novaclient-2.15.0.ebuild:
  Keyword ~amd64-linux ~x86-linux

  26 Nov 2013; Ian Delaney <idella4@gentoo.org> metadata.xml,
  python-novaclient-9999.ebuild:
  switched herd

  26 Nov 2013; Ian Delaney <idella4@gentoo.org> python-novaclient-2.15.0.ebuild,
  python-novaclient-9999.ebuild:
  re-invoked (unrestricted) & updated test phase

*python-novaclient-2.15.0 (24 Oct 2013)

  24 Oct 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.15.0.ebuild:
  added testing to 2.15.0 takes forever, but works

*python-novaclient-2.14.1 (11 Aug 2013)

  11 Aug 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.14.1.ebuild, -python-novaclient-2.10.0-r1.ebuild,
  -python-novaclient-2.13.0.ebuild:
  updating python-novaclient

*python-novaclient-2.13.0-r1 (31 May 2013)

  31 May 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.13.0-r1.ebuild:
  updating python-keystoneclient deps to be fully distutils-r1 and update the
  requests dep to be more in line with reality

  03 May 2013; Matthew Thode <prometheanfire@gentoo.org>
  python-novaclient-2.10.0-r1.ebuild, python-novaclient-2.11.1-r1.ebuild,