@@ -4,24 +4,25 @@ Hash: SHA256
 DIST python-novaclient-2.15.0.tar.gz 302490 SHA256 ec18819f1021419d7696705c8d008ca80535bd90577dc0b7708afe51dccee099 SHA512 27a2487834d760495a8f80a732dd7709055d38b72153db0c47e129b257a3589d99bb57d85b92a78865ee32b473c3e690fa4dfd7cccec4092b077c75528942892 WHIRLPOOL 23b16be52171c5ac80b42a698d12fcfe9a8c0bd31e45a102cd092e03dcc9323faeb5906b32e65df8c1f22fd6818c8f7cccdf11f06fb3443d7c017e7fc8abe51d
 DIST python-novaclient-2.17.0.tar.gz 230712 SHA256 af6f46890715eb5f4e0d25a714effbbac8da020715f81b1572a301c5e9887197 SHA512 6493aadab5589fb2a02c4a1440cd3f71e6918688ba634a89101c7c7b10aaa6600d8511097b07679f5927746c3463584287a0d7602a47397f169697a944b6a731 WHIRLPOOL d7523bee3ad59e40e021177cd98dff5a91136ea3ee56e2844857dced5b9af7a2bb47c5880d9fe0d35e4de9a022864c88e009b71ca762dea84eb139ff5b99cad1
 EBUILD python-novaclient-2.15.0.ebuild 1611 SHA256 b4317e76a3e6f6b1f801e2457482d39bca21b94151abaf36e7b86d72ba5cae64 SHA512 ad91f8e1e551985447c91b261bbe05eb595bc0219e85ac722348dd2c39bff8db9b1254659180c3e83c2430f802a5ad8149d7168b86c9290c82531486e7148bff WHIRLPOOL 3fb4a5d1d7fb538c0bc47c51e9a57e44584e2460de4c086919663400addf05b0906d4cf32340ecf0c2536d445003d2f5861984c2515a5c2c395cdc40023b215b
+EBUILD python-novaclient-2.17.0-r1.ebuild 1661 SHA256 318ca67f48814cc709b9bb9f1e4b287389af9350638ec8948957aca80ebf2648 SHA512 309c36297e7ee1213610bacc100911ced72e9a98015e3c0c36d8880f0d50db835c521814c4aad7a62ba60ac45c125c4dc244e01f447602f407516d6169522636 WHIRLPOOL 54bd116c4605e118a51b2d99e5dcb4874b6edf51ffef1cc49806ae6a4959795a5dbe3277accdea3fb493c22f5ff433e43d5dad2143531c89b835305be107ddf0
 EBUILD python-novaclient-2.17.0.ebuild 1874 SHA256 04511ffa283a0e1f8770786187f0438dcc4198f017147a2dfc1e6be076e094d9 SHA512 cf4ce9d01e5f959095e1bbf9399b114c96edafd7e2874517c5a5b3000c40f9b32dea8e1d151ef86672825d15df3f585405069c0fb80f08740c55ff88a4914d0b WHIRLPOOL 73ad134e390bc03f4f054b9a0f7b9782df8fbdadc1c652c8b2d2b2f12b7ca256f8eb5111fde2ffbd900b412c823a33345d8c1d49f08f5d4de4b49aa1f5e5cb8e
 EBUILD python-novaclient-9999.ebuild 1144 SHA256 a4ecb2dc8af0c8f7640dca2b19837e3c655f6d628b98770a44b3995ee73be3c6 SHA512 84f0eee9338a2b2329f2e0c95a64187efb2347f1d0a0375e424fcf5591f23196eb65abc1aa49daf0cc8684c649eae469579910dbf6774749ccb6c13a5b54b44d WHIRLPOOL bcaca3baa4d2174b42e25ad2252eb7763f76b352682741d48d23c7411ca6ea9953b9f7f1e62e9c8ae1843218bcf19404346d766f92ddfb1bfa17e26e0ff61c6f
-MISC ChangeLog 3682 SHA256 007ea6aae52704ccd6a964a7ff062dbbfd15470f33db89e952489b1f0152ce3e SHA512 75d51a9c4737f14558251754525b1d07f36d89a5dd2c2be7a01bf7ad7ea178f9e2613dd91bf21375b6fae2ef0d7d735f633f66293c912248799acbc0e5caba9c WHIRLPOOL 07631b5a93d6d89c9317bed28b2b633c65637e2e197ccc52ec51541257eda1751bd21815e8876c2c201a4aeb0bc9f13059f28757f7270a6e2b43053903a22d6e
+MISC ChangeLog 3846 SHA256 56b274752a2b0865fbf630f9042a92e23d1d7f3113b011f00c907815c4f2cc57 SHA512 fd69b9b944646deb7ffe2ea79fde96c0026eaabc9ecc90c395e0b3f226d9959d13e8e0e76f72c73bed16eed8294e119232d762c0185a66572724b5a70a5407b5 WHIRLPOOL fdd7dc849e8303839007776447325ebfc9a72c271ea56fbe1d92987baf2f7152a755be573dc09fbdc1cacfe9dd2255edd203142a2979412bf1847a8cea99c86d
 MISC metadata.xml 503 SHA256 698eef6d00491b7131e90648000c1bc56e7756023d2426faeecbe161d9af0340 SHA512 6c97406a8c63c022513d8682195aa95efb7fb76ac42cb7f69b0fd3b4236d0d955583f75b7e7a4cf38367d3d32d687823e973557374a8cffd23fc146a3a0f5424 WHIRLPOOL c8361664cd00599a7364dac3fbee8f11f28f65e90d95ac844659980079a3e8761f9aaa101d6364fb751b2513a509fb125d0ca53042532d017de61aff3bf55f92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTXJr+AAoJECRx6z5ArFrDG1AQAINvV+orHHpXj0aEnwCaZJ3d
-KXIES6oG7AjiS1DjGQK/+AhEPOiR6bRwwgZrzEZUOZ0H07XYdjxqPrhYfVMXiYv1
-GiuwFAlZET1cIg8jsZldHVuXe1JbT2z8QVyTmeUctkHeGCwwLB991sxecKlp1+ia
-1HX4PRNwtLPw2LK/9MFxroaDPpgxcf9ywB+P8cr7BGpOctHh9Ei+S2q/dkw5CVSn
-eoPm51A7be0IlC/XbsL08UAcRZkD2Rnw5ee17HVrkbDiqowyzcXlXbECC8hY5IAG
-xq4Dm2SrYeMOj9Tyh+cdDPPCI9WTCcyzVm6lPw5BQiq6d8rOy7jLp5LFM5dihZ97
-ogmCD3JmN9+oA1AYmDsWapVyG7MmF5WgvT/RGfTmHa6idxwOVUrGImFJCtTWlw7H
-Jqpu8viwFUmIYAWO6uCHxJZXCNrg1gzCovVAFww/V/23RDXwAHeaZGQD96e5o+SZ
-9bPXMC0XBGuliHXPwDSGwjeY8hrEYLtnmj30qnWt1Y+7O3Xx1/w1J5uaFczvWpL/
-5Fe9E7p6sn3gCKSMmpy+nM2eewljkmBLyhb0Mfg8yBautYlmmora9YLch+PQcs46
-t/WFIcRi3AWhYYv8Ma7C3L9xSsJsgWjhFzs5GstUQ65T814DK3ullpviEOwxbWvb
-z6uUPnEN3MHm9zNQxMFi
-=xZ+q
+iQIcBAEBCAAGBQJTcDz5AAoJECRx6z5ArFrDhzsQALaQsz0j5XK6TklkvBJHvS1c
+Y+BUPXeFXohPDvxc1hlzklcRyx2GLR1tyPvvUiRt0nkw+0t3AE1oqGYLNl9ZDHPt
+3qlv2PjprSY2IOYpL2MdUAjTe8erchHvjwn9cblOPTBREbeSEC+ApuXsjsXob/rI
+RkZgHx6SA+7e3AarbEg4jS0yqq/vu9cs7Ww+2yqC1z/rwHRq1s8ay5y9OcE/IJda
+i3et6Fz720GwexnTCbfr3p+C0WnoEgE1zv+2mCx+wlo7zHMhp0rpW4JvkyOQxyyy
+ERTniK9SSdbEavuOiACRJaOOfi4mpt8lsrj6/BLmY6iiKMTHdRk4bqC4EIQcNwJA
+HCwgBM0qg8AxPeyxdObEf6JxD4L5psm9Si2yw04ARp270rCo+86qXYxuNFHy/6J0
+ambAlzj4omnPslYFGDeOgFCTDkb/o1HAm9cUGsPuMXCRsKulou8kDeHfxECQbRLY
+k0+q3RcPqScUBa+dWpMMq1qzc3tedXSgFFZWPg3x4dea2lGOKuh5axj9bx8LeVZj
+iIjeFQ/SSdZNRDySNh3W98+lC3xJ9ikzsUxrejsSYcx+p7srFMPhanD/ykhUZyRC
+Sv8EDtvTPb1PvVZKjNE9SwE1u16t2DCMxUV19RzzmtjwG5aFwKEi6gWOvOTCw2j8
+uzVdNo9gUzkrZ/pjmoCa
+=UnU9
 -----END PGP SIGNATURE-----
