@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-novaclient
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-novaclient/ChangeLog,v 1.19 2014/04/27 05:51:36 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-novaclient/ChangeLog,v 1.20 2014/05/12 03:15:32 prometheanfire Exp $
+
+*python-novaclient-2.17.0-r1 (12 May 2014)
+
+  12 May 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +python-novaclient-2.17.0-r1.ebuild:
+  updating for new fun
 
   27 Apr 2014; Matthew Thode <prometheanfire@gentoo.org>
   -python-novaclient-2.11.1-r1.ebuild, -python-novaclient-2.13.0-r1.ebuild,
